[OPENMEETINGS-940] PermGen on build server should be fixed
git-svn-id: https://svn.apache.org/repos/asf/openmeetings/trunk/singlewebapp@1592676 13f79535-47bb-0310-9956-ffa450edef68